# nerva

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/skills/conventional-commit/: SKILL.md
crates/nerva-cli/: Cargo.toml
crates/nerva-cli/src/: client.rs  main.rs
crates/nerva-core/: Cargo.toml
crates/nerva-core/src/: agent.rs  bus.rs  bus_test.rs  config.rs  context.rs  error.rs  lib.rs  llm.rs  policy.rs  registry.rs  skill.rs  types.rs  vlm.rs  watcher.rs
crates/nerva-daemon/: Cargo.toml
crates/nerva-daemon/src/: handler.rs  main.rs  protocol.rs  server.rs
crates/nerva-daemon/tests/: integration.rs
crates/nerva-os/: Cargo.toml
crates/nerva-os/src/: clipboard.rs  lib.rs  notification.rs  ocr.rs  process.rs  screenshot.rs  wayland.rs
crates/nerva-skills/: Cargo.toml
crates/nerva-skills/src/: active_window.rs  capture_screen.rs  clipboard_read.rs  focus_window.rs  gather_context.rs  launch_app.rs  lib.rs  list_windows.rs  notify.rs  ocr_screen.rs  open_path.rs  plugin_loader.rs  run_command.rs  script_skill.rs  summarize_screen.rs
crates/nerva-skills/src/watchers/: clipboard_watcher.rs  mod.rs  window_watcher.rs
crates/nerva-skills/tests/: plugin_test.rs
docs/: architecture.md  design-decisions.md  development.md  nix-integration.md  roadmap.md
