[workspace]
resolver = "2"
members = [
    "crates/nerva-core",
    "crates/nerva-daemon",
    "crates/nerva-skills",
    "crates/nerva-os",
    "crates/nerva-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
