[package]
name = "nerva-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nerva"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
