[package]
name = "nerva-os"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nerva-core = { path = "../nerva-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
