[package]
name = "nerva-skills"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nerva-core = { path = "../nerva-core" }
nerva-os = { path = "../nerva-os" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
